--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="black">#FF000000</color>
     <color name="primary">#212121</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="meowfy">#0c458a</color>
 </resources>
