--- a/app/src/main/res/drawable/laucher_screen.xml
+++ b/app/src/main/res/drawable/laucher_screen.xml
@@ -2,6 +2,6 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:drawable="@color/black"/>
     <item>
-        <bitmap android:gravity="center" android:src="@drawable/meowfy_logo" />
+        <bitmap android:gravity="center" android:src="@drawable/logo_meowfy" />
     </item>
 </layer-list>
