--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -17,6 +17,7 @@
         android:src="@mipmap/logo_titel_foreground"/>
 
     <Button
+        android:id="@+id/login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="100dp"
@@ -26,6 +27,8 @@
         app:layout_constraintStart_toStartOf="parent"
         android:background="@color/meowfy"
         android:textStyle="bold"
-        android:textSize="25sp"/>
+        android:textSize="25sp"
+        android:paddingHorizontal="50dp"
+        style="@style/Widget.AppCompat.Button.Borderless"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
