--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,8 +5,8 @@
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
-    <color name="primary">#212121</color>
+    <color name="primary">#FF000000</color>
+    <color name="secundary">#212121</color>
     <color name="white">#FFFFFFFF</color>
     <color name="meowfy">#0c458a</color>
 </resources>
