--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,10 +13,13 @@
         android:layout_height="match_parent" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottomNavigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/secundary"
+        android:background="@color/primaryLigth1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:menu="@menu/navigation_view_menu"/>
+        app:menu="@menu/navigation_view_menu"
+        app:itemRippleColor="@color/secundary"
+        style="@style/Widget.MaterialComponents.BottomNavigationView.Colored"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
