--- a/app/src/main/res/menu/navigation_view_menu.xml
+++ b/app/src/main/res/menu/navigation_view_menu.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <!--<item
+    <item
         android:id="@+id/home"
         android:enabled="true"
         android:icon="@drawable/ic_baseline_home_24"
-        android:title="@string/home_page"/>
+        android:title="@string/home"/>
     <item
         android:id="@+id/sheare"
         android:enabled="true"
@@ -13,6 +13,6 @@
     <item
         android:id="@+id/library"
         android:enabled="true"
-        android:icon="@drawable/ic_baseline_notifications_24"
-        android:title="@string/bell"/>-->
+        android:icon="@drawable/ic_baseline_home_24"
+        android:title="@string/your_library"/>
 </menu>
