--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,7 +6,8 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="primary">#FF000000</color>
-    <color name="secundary">#212121</color>
+    <color name="primaryLigth1">#212121</color>
+    <color name="primaryLigth2">#484848</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="meowfy">#0c458a</color>
+    <color name="secundary">#0c458a</color>
 </resources>
