modificacion en el main per a mostrar llistes, encara es te que acabar

--- a/app/src/main/res/layout/item_lista_main.xml
+++ b/app/src/main/res/layout/item_lista_main.xml
@@ -9,7 +9,9 @@
         android:id="@+id/image_lista"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@mipmap/ic_launcher"/>
+        android:src="@mipmap/ic_launcher"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"/>
 
     <TextView
         android:layout_width="wrap_content"
