--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<ScrollView android:layout_height="wrap_content"
+    android:layout_width="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
+<RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".fragments.MainFragment"
@@ -33,7 +36,8 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_marginTop="10dp"
-        android:layout_below="@id/recentlyPlayed"/>
+        android:layout_below="@id/recentlyPlayed"
+        tools:listitem="@layout/item_lista_main"/>
 
     <TextView
         android:id="@+id/yourPlaylist"
@@ -71,3 +75,4 @@
         android:layout_below="@id/jumpBack"/>
 
 </RelativeLayout>
+</ScrollView>
