--- a/app/src/main/res/layout/fragment_your_library.xml
+++ b/app/src/main/res/layout/fragment_your_library.xml
@@ -5,10 +5,20 @@
     android:layout_height="match_parent"
     tools:context=".fragments.YourLibraryFragment">
 
-    <!-- TODO: Update blank fragment layout -->
     <TextView
+        android:id="@+id/secctionTitel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Music"
+        android:textColor="@color/white"
+        android:textStyle="bold"
+        android:textSize="25sp"/>
+
+    <FrameLayout
+        android:id="@+id/fragment_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="hello library" />
+        android:layout_below="@+id/secctionTitel"
+        />
 
 </RelativeLayout>
