layout of yourLibrery done

--- a/app/src/main/res/layout/fragment_your_library.xml
+++ b/app/src/main/res/layout/fragment_your_library.xml
@@ -14,11 +14,17 @@
         android:textStyle="bold"
         android:textSize="25sp"/>
 
-    <FrameLayout
-        android:id="@+id/fragment_container"
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/libraryNavigation"
+        style="@style/Widget.MaterialComponents.BottomNavigationView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/secctionTitel" />
+
+    <androidx.viewpager.widget.ViewPager
+        android:id="@+id/viewpager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/secctionTitel"
-        />
+        android:layout_below="@+id/libraryNavigation" />
 
 </RelativeLayout>
