- PlaylistFragment final version *java *xml - AdapterLibraryList * with item_yourlibrary.xml - CreatePlaylistFragment (fragment for add playlist) *java *xml

--- a/app/src/main/res/layout/fragment_playlist.xml
+++ b/app/src/main/res/layout/fragment_playlist.xml
@@ -5,11 +5,10 @@
     android:layout_height="match_parent"
     tools:context=".fragments.PlaylistFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/lista_library"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="playlist"
-        android:textColor="@color/white"/>
-
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        tools:listitem="@layout/item_yourlibrary"/>
 </FrameLayout>
