--- a/app/src/main/res/layout/fragment_artist.xml
+++ b/app/src/main/res/layout/fragment_artist.xml
@@ -1,41 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<ScrollView android:layout_height="match_parent"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".fragments.ArtistFragment">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context=".fragments.ArtistFragment">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/artistas_library"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        tools:listitem="@layout/item_yourlibrary"/>
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/artistas_library"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:listitem="@layout/item_yourlibrary"/>
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/text_recomended"
-        android:text="Recommended artist"
-        android:textStyle="bold"
-        android:textColor="@color/white"
-        android:textSize="20sp"
-        android:layout_marginTop="20dp"
-        android:layout_below="@id/artistas_library"/>
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/subtext_recomended"
-        android:text="Based on the songs and albums you like"
-        android:textStyle="bold"
-        android:textColor="@color/primaryLigth2"
-        android:layout_marginTop="5dp"
-        android:layout_below="@id/text_recomended"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/text_recomended"
+            android:text="Recommended artist"
+            android:textStyle="bold"
+            android:textColor="@color/white"
+            android:textSize="20sp"
+            android:layout_marginTop="20dp"
+            android:layout_below="@id/artistas_library"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/subtext_recomended"
+            android:text="Based on the songs and albums you like"
+            android:textStyle="bold"
+            android:textColor="@color/primaryLigth2"
+            android:layout_marginTop="5dp"
+            android:layout_below="@id/text_recomended"/>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recomended_library"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        tools:listitem="@layout/item_yourlibrary_recomended"
-        android:layout_below="@id/subtext_recomended"
-        android:layout_marginTop="20dp" />
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recomended_library"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:listitem="@layout/item_yourlibrary_recomended"
+            android:layout_below="@id/subtext_recomended"
+            android:layout_marginTop="20dp" />
 </RelativeLayout>
+</ScrollView>
