- AlbumFragment completed * java * xml - ic_baseline_favorite_border_24.xml: image for favorite ImageButton add of albums fragment - AdapterLibraryListAdd2 * lack the metod for add albun in faovrits in onClickListener of imageButton. - item_yourlibrary_recomended2.xml

--- a/app/src/main/res/layout/fragment_your_library.xml
+++ b/app/src/main/res/layout/fragment_your_library.xml
@@ -19,10 +19,11 @@
         android:id="@+id/viewpager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/secctionTitel">
+        android:layout_below="@+id/secctionTitel"
+        android:layout_marginRight="10dp">
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tab_layout"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@color/primary">
             <com.google.android.material.tabs.TabItem
