--- a/app/src/main/res/layout/item_yourlibrary_recomended1.xml
+++ b/app/src/main/res/layout/item_yourlibrary_recomended1.xml
@@ -4,6 +4,7 @@
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_marginVertical="10dp">
+
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -15,27 +16,36 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/titel_library"
+        android:id="@+id/name_artist"
         android:layout_toRightOf="@id/image_library"
         android:layout_alignParentTop="true"
         android:layout_marginTop="20dp"
         android:textStyle="bold"
         android:textColor="@color/white"
         android:layout_marginLeft="10dp"
-        tools:text="nom"
+        tools:text="nom artist"
         android:layout_marginStart="10dp"
         android:textSize="20sp"/>
-
     <TextView
-        android:id="@+id/subtitel_library"
+        android:id="@+id/num_songs"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/titel_library"
+        android:layout_below="@id/name_artist"
         android:layout_toEndOf="@+id/image_library"
         android:layout_toRightOf="@+id/image_library"
         android:textColor="@color/primaryLigth2"
         android:layout_marginLeft="10dp"
-        tools:text="subtitel"
+        tools:text="num songs"
         android:layout_marginStart="10dp"
         android:layout_marginTop="15dp"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/follow_artist"
+        android:text="FOLLOW"
+        android:layout_alignParentRight="true"
+        android:layout_marginVertical="20dp"
+        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+        android:layout_alignParentEnd="true" />
 </RelativeLayout>
