--- a/app/src/main/res/layout/item_yourlibrary.xml
+++ b/app/src/main/res/layout/item_yourlibrary.xml
@@ -8,9 +8,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/image_library"
-        android:src="@mipmap/ic_launcher"
+        android:src="@drawable/ic_baseline_add_24"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"/>
+        android:layout_alignParentTop="true"
+        android:padding="30dp"
+        android:background="@color/primaryLigth1"/>
 
     <TextView
         android:layout_width="wrap_content"
