- Redimension of image in * AdapterMainList (morover i change the position of bindDate to holder) * AdapterLibraryList * AdapterLibraryListAdd1 * AdapterLibraryListAdd2 - change the items_layout for adapt to new size of image in: * item_lista_main.xml * item_yourlibrary.xml * item_yourlibrary_recomended1.xml * item_yourlibrary_recomended2.xml

--- a/app/src/main/res/layout/item_lista_main.xml
+++ b/app/src/main/res/layout/item_lista_main.xml
@@ -3,7 +3,8 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_marginRight="5dp">
+    android:layout_marginRight="10dp"
+    android:layout_marginEnd="10dp">
 
     <ImageView
         android:id="@+id/image_main"
@@ -11,7 +12,8 @@
         android:layout_height="wrap_content"
         android:src="@mipmap/ic_launcher"
         android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"/>
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
     <TextView
         android:layout_width="wrap_content"
