--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -3,17 +3,51 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.SearchFragment">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".fragments.SearchFragment"
+    tools:background="@color/primary"
+    android:layout_marginRight="20dp"
+    android:layout_marginEnd="20dp">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:id="@+id/titel"
         android:text="Search"
         android:textColor="@color/white"
         android:textSize="25sp"
         android:textStyle="bold"/>
 
+    <com.google.android.material.textfield.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/search_edit"
+        android:hint="Artist, songs or albums"
+        android:layout_below="@id/titel"
+        android:background="@color/primaryLigth1"
+        app:boxBackgroundColor="@color/primaryLigth1"
+        android:textColorHint="@color/primaryLigth2"
+        app:endIconMode="clear_text"
+        app:endIconDrawable="@drawable/ic_baseline_close_24">
+        <com.google.android.material.textfield.TextInputEditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@color/white"/>
+    </com.google.android.material.textfield.TextInputLayout>
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/lista_search"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        tools:listitem="@layout/item_search"
+        android:layout_below="@id/search_edit"/>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/lista_recenly_search"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        tools:listitem="@layout/item_recently_search"
+        android:layout_below="@id/search_edit"/>
 
 </RelativeLayout>
