--- a/app/src/main/res/layout/item_recently_search.xml
+++ b/app/src/main/res/layout/item_recently_search.xml
@@ -2,50 +2,51 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_marginVertical="10dp">
+    android:layout_marginTop="5dp"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/image_library"
-        android:src="@mipmap/ic_launcher"
+        android:src="@drawable/laucher_screen"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"/>
+        android:layout_alignParentTop="true"
+        tools:padding="15dp"
+        tools:background="@color/primaryLigth1"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/name_album"
+        android:id="@+id/titel_search"
         android:layout_toRightOf="@id/image_library"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="15dp"
-        android:textStyle="bold"
+        android:layout_marginTop="5dp"
         android:textColor="@color/white"
         android:layout_marginLeft="10dp"
-        tools:text="nom llista"
+        tools:text="nom"
         android:layout_marginStart="10dp"
-        android:textSize="20sp"/>
+        android:textSize="15sp"/>
+
     <TextView
-        android:id="@+id/name_autor"
+        android:id="@+id/subtitel_search"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/name_album"
+        android:layout_below="@id/titel_search"
         android:layout_toEndOf="@+id/image_library"
         android:layout_toRightOf="@+id/image_library"
         android:textColor="@color/primaryLigth2"
         android:layout_marginLeft="10dp"
-        tools:text="name creator"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="5dp"/>
+        tools:text="subtitel"
+        android:layout_marginStart="10dp"/>
 
     <ImageButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/follow_album"
+        android:id="@+id/delete_search"
         android:layout_alignParentRight="true"
         android:layout_centerInParent="true"
-        android:src="@drawable/ic_baseline_favorite_border_24"
+        android:src="@drawable/ic_baseline_close_24"
         android:background="@color/primary"
         android:layout_alignParentEnd="true" />
 </RelativeLayout>
