--- a/app/src/main/res/layout/item_yourlibrary_recomended1.xml
+++ b/app/src/main/res/layout/item_yourlibrary_recomended1.xml
@@ -45,7 +45,7 @@
         android:id="@+id/follow_artist"
         android:text="FOLLOW"
         android:layout_alignParentRight="true"
-        android:layout_marginVertical="20dp"
+        android:layout_centerInParent="true"
         style="@style/Widget.MaterialComponents.Button.OutlinedButton"
         android:layout_alignParentEnd="true" />
 </RelativeLayout>
