--- a/app/src/main/res/layout/item_search.xml
+++ b/app/src/main/res/layout/item_search.xml
@@ -3,13 +3,13 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_marginTop="5dp"
+    android:layout_marginTop="10dp"
     tools:background="@color/primary">
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/image_library"
+        android:id="@+id/image_search"
         android:src="@drawable/laucher_screen"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
@@ -20,7 +20,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/titel_search"
-        android:layout_toRightOf="@id/image_library"
+        android:layout_toRightOf="@id/image_search"
         android:layout_alignParentTop="true"
         android:layout_marginTop="5dp"
         android:textColor="@color/white"
@@ -34,8 +34,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/titel_search"
-        android:layout_toEndOf="@+id/image_library"
-        android:layout_toRightOf="@+id/image_library"
+        android:layout_toEndOf="@+id/image_search"
+        android:layout_toRightOf="@+id/image_search"
         android:textColor="@color/primaryLigth2"
         android:layout_marginLeft="10dp"
         tools:text="subtitel"
