--- a/app/src/main/res/layout/fragment_playlist.xml
+++ b/app/src/main/res/layout/fragment_playlist.xml
@@ -5,9 +5,11 @@
     android:layout_height="match_parent"
     tools:context=".fragments.PlaylistFragment">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/lista_library"
+    <!-- TODO: Update blank fragment layout -->
+    <TextView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        tools:listitem="@layout/item_yourlibrary"/>
+        android:layout_height="match_parent"
+        android:text="playlist"
+        android:textColor="@color/white"/>
+
 </FrameLayout>
