--- a/app/src/main/res/layout/fragment_playlist_library.xml
+++ b/app/src/main/res/layout/fragment_playlist_library.xml
@@ -3,13 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.ArtistFragment">
+    tools:context=".fragments.PlaylistLibraryFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/lista_library"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="artist"
-        android:textColor="@color/white"/>
-
+        android:layout_height="wrap_content"
+        tools:listitem="@layout/item_yourlibrary"/>
 </FrameLayout>
